--- a/eureka/pom.xml
+++ b/eureka/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>studycloud</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>eureka</artifactId>
+	<artifactId>eureka-server</artifactId>
 
 	<dependencies>
 		<dependency>
