--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<module>client</module>
 		<module>product</module>
 		<module>order</module>
+		<module>config-server</module>
 	</modules>
 	
 	
