--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -10,6 +10,18 @@
 	<artifactId>api-gateway</artifactId>
 
 	<dependencies>
+		<!-- sentinel 自动配置 -->
+		<dependency>
+			<groupId>com.alibaba.cloud</groupId>
+			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+			<version>2.1.0.RELEASE</version>
+		</dependency>
+		<!-- sentinel 使用了apollo作为数据源 -->
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-datasource-apollo</artifactId>
+			<version>1.6.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
