--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -5,3 +5,10 @@ spring:
       profile: dev
         
 eureka:  client:    service-url:      defaultZone: http://vm1:8761/eureka
+
+apollo:
+  bootstrap:
+    enabled: true
+  meta: http://apollodev.stosystem.com:58080
+app:
+  id: YW04_005      
