网关应用初始加载/持久化api分组信息

--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -15,6 +15,11 @@ spring:
             namespace-name: application
             flow-rules-key: ${spring.application.name}-flow-rules
             ruleType: flow
+        gw-api:
+          apollo:
+            namespace-name: application
+            flow-rules-key: ${spring.application.name}-gateway-apis
+            ruleType: gw-api-group
       zuul:
         enabled: true
         order:
