写一个新的接入Sentinel的Zuul网关应用

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<module>order</module>
 		<module>config-server</module>
 		<module>api-gateway</module>
+		<module>simple-gateway-demo</module>
 	</modules>
 	
 	
