商品服务 接入apollo和sentinel，下一个问题：sentinel client怎么获取并上报app.id到dashboard？

--- a/product/product-server/src/main/resources/bootstrap.yml
+++ b/product/product-server/src/main/resources/bootstrap.yml
@@ -7,5 +7,22 @@ spring:
         enabled: true
         service-id: config-server
       profile: dev    
+    sentinel:
+      log:
+        dir: ./logs
+        switch-pid: true
+      transport:
+        dashboard: http://localhost:7002
+      datasource:
+        flow:
+          apollo:
+            namespace-name: application
+            flow-rules-key: ${spring.application.name}-flow-rules
+            default-flow-rule-value: 
+            rule-type: flow  
 eureka:  client:    service-url:      defaultZone: http://vm1:8761/eureka
 
+apollo:
+  meta: http://apollodev.stosystem.com:58080
+app:
+  id: YW04_004
