使用sentinel版本改为1.6.3-sto

--- a/product/product-server/src/main/resources/bootstrap.yml
+++ b/product/product-server/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ spring:
       profile: dev    
     sentinel:
       log:
-        dir: ./logs
+        dir: ./logs/
         switch-pid: true
       transport:
         dashboard: http://localhost:7002
