--- a/simple-gateway-demo/pom.xml
+++ b/simple-gateway-demo/pom.xml
@@ -8,23 +8,109 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>simple-gateway-demo</artifactId>
-
+	<properties>
+		<sentinel.version>1.7.0-sto</sentinel.version>
+		<apollo.version>1.3.0</apollo.version>
+	</properties>
 	<dependencies>
 		<!-- sentinel 自动配置 -->
+		<!-- Sentinel Spring Cloud Zuul AutoConfiguration -->
+		<!-- sentinel 使用了apollo作为数据源 -->
+		<!-- 
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
 		</dependency>
-		<!-- Sentinel Spring Cloud Zuul AutoConfiguration -->
 		<dependency>
-			<groupId>com.alibaba.cloud</groupId>
-			<artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+		    <groupId>com.alibaba.cloud</groupId>
+		    <artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
 		</dependency>
-		<!-- sentinel 使用了apollo作为数据源 -->
 		<dependency>
 			<groupId>com.alibaba.csp</groupId>
 			<artifactId>sentinel-datasource-apollo</artifactId>
 		</dependency>
+		 -->
+		<!-- Apollo -->
+	    <dependency>
+	      <groupId>com.ctrip.framework.apollo</groupId>
+	      <artifactId>apollo-client</artifactId>
+	      <version>${apollo.version}</version>
+	    </dependency>		 
+		<!-- Sentinel -->
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-core</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-parameter-flow-control</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-datasource-extension</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-datasource-apollo</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-web-servlet</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-zuul-adapter</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-transport-simple-http</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-annotation-aspectj</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-cluster-server-default</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-cluster-client-default</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-api-gateway-adapter-common</artifactId>
+			<version>${sentinel.version}</version>
+		</dependency>	
+		<!-- Sentinel AutoConfiguration -->
+	<dependency>
+		<groupId>com.alibaba.cloud</groupId>
+		<artifactId>spring-cloud-alibaba-sentinel</artifactId>
+		<version>2.1.0.RELEASE</version>
+		<exclusions>
+			<exclusion>
+				<groupId>com.alibaba.csp</groupId>
+				<artifactId>sentinel-transport-simple-http</artifactId>
+			</exclusion>
+		</exclusions>
+	</dependency>
+	
+			 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-zuul</artifactId>
