--- a/simple-gateway-demo/pom.xml
+++ b/simple-gateway-demo/pom.xml
@@ -109,6 +109,17 @@
 			</exclusion>
 		</exclusions>
 	</dependency>
+	<dependency>
+		<groupId>com.alibaba.cloud</groupId>
+		<artifactId>spring-cloud-alibaba-sentinel-gateway</artifactId>
+		<version>2.1.0.RELEASE</version>
+		<exclusions>
+			<exclusion>
+				<groupId>com.alibaba.csp</groupId>
+				<artifactId>sentinel-transport-simple-http</artifactId>
+			</exclusion>
+		</exclusions>
+	</dependency>	
 	
 			 
 		<dependency>
