--- a/simple-gateway-demo/src/main/resources/application.properties
+++ b/simple-gateway-demo/src/main/resources/application.properties
@@ -14,12 +14,12 @@ spring.cloud.config.profile=dev
 eureka.client.service-url.defaultZone=http://vm1:8761/eureka
 
 apollo.bootstrap.enabled=true
-apollo.meta=http://192.168.122.72:8080
-app.id=YW01_product
+apollo.meta=http://10.36.30.90:8080
+app.id=YW04_002
 
 spring.cloud.sentinel.log.dir=./logs/
 spring.cloud.sentinel.log.switch-pid=true
-spring.cloud.sentinel.transport.dashboard=http://10.33.74.155:7001
+spring.cloud.sentinel.transport.dashboard=http://192.168.1.203:7001
 
 spring.cloud.sentinel.datasource.gw-flow.apollo.namespace-name=application
 spring.cloud.sentinel.datasource.gw-flow.apollo.flow-rules-key=${spring.application.name}-gw-flow-rules
