修改api-gateway/pom.xml，有了sentinelZuulfilter，就不再需要commonfilter了，可以看链路展示那边的区别

--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -16,6 +16,12 @@
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>com.alibaba.csp</groupId>
+					<artifactId>sentinel-web-servlet</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 		    <groupId>com.alibaba.cloud</groupId>
