--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -11,7 +11,8 @@ spring:
         switch-pid: true
       transport:
         #dashboard: http://10.33.74.177:7001
-        dashboard: http://192.168.1.203:7001
+        #dashboard: http://192.168.1.203:7001
+        dashboard: http://vm1:8822 
       datasource:
         gw-flow:
           apollo:
