--- a/product/product-server/pom.xml
+++ b/product/product-server/pom.xml
@@ -9,100 +9,22 @@
 	</parent>
 	<artifactId>product-server</artifactId>
 	<properties>
-		<sentinel.version>1.7.0-sto</sentinel.version>
-		<apollo.version>1.3.0</apollo.version>
+		<sentinel.transport.simple.http.sto>1.7.0-sto</sentinel.transport.simple.http.sto>
 	</properties>
 	<dependencies>
-		<!-- 
+		<dependency>
+			<groupId>com.alibaba.csp</groupId>
+			<artifactId>sentinel-transport-simple-http</artifactId>
+			<version>${sentinel.transport.simple.http.sto}</version><!--$NO-MVN-MAN-VER$-->
+		</dependency>	
 		<dependency>
 			<groupId>com.alibaba.csp</groupId>
 			<artifactId>sentinel-datasource-apollo</artifactId>
-		</dependency>			
+		</dependency>		
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
 		</dependency>
-		 -->
-		<!-- Apollo -->
-	    <dependency>
-	      <groupId>com.ctrip.framework.apollo</groupId>
-	      <artifactId>apollo-client</artifactId>
-	      <version>${apollo.version}</version>
-	    </dependency>		 
-		<!-- Sentinel -->
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-core</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-parameter-flow-control</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-datasource-extension</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-datasource-apollo</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-web-servlet</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-zuul-adapter</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-spring-cloud-gateway-adapter</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-transport-simple-http</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-annotation-aspectj</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-cluster-server-default</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-cluster-client-default</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba.csp</groupId>
-			<artifactId>sentinel-api-gateway-adapter-common</artifactId>
-			<version>${sentinel.version}</version>
-		</dependency>	
-		<!-- Sentinel AutoConfiguration -->
-	<dependency>
-		<groupId>com.alibaba.cloud</groupId>
-		<artifactId>spring-cloud-alibaba-sentinel</artifactId>
-		<version>2.1.0.RELEASE</version>
-		<exclusions>
-			<exclusion>
-				<groupId>com.alibaba.csp</groupId>
-				<artifactId>sentinel-transport-simple-http</artifactId>
-			</exclusion>
-		</exclusions>
-	</dependency>
-
 		
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
