--- a/product/product-server/pom.xml
+++ b/product/product-server/pom.xml
@@ -24,6 +24,12 @@
 		<dependency>
 			<groupId>com.alibaba.cloud</groupId>
 			<artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>com.alibaba.csp</groupId>
+					<artifactId>sentinel-transport-simple-http</artifactId>				
+				</exclusion>
+			</exclusions>
 		</dependency>
 		
 		<dependency>
