--- a/simple-gateway-demo/src/main/resources/application.properties
+++ b/simple-gateway-demo/src/main/resources/application.properties
@@ -13,13 +13,18 @@ spring.cloud.config.profile=dev
 #cloud eureka server
 eureka.client.service-url.defaultZone=http://vm1:8761/eureka
 
+zuul.routes.product.path=/product/**
+zuul.routes.product.service-id=product
+zuul.routes.product-api.path=/product-api/**
+zuul.routes.product-api.service-id=product
+
 apollo.bootstrap.enabled=true
 apollo.meta=http://10.36.30.90:8080
 app.id=YW04_002
 
 spring.cloud.sentinel.log.dir=./logs/
 spring.cloud.sentinel.log.switch-pid=true
-spring.cloud.sentinel.transport.dashboard=http://vm1:8822
+spring.cloud.sentinel.transport.dashboard=http://localhost:7001
 
 spring.cloud.sentinel.datasource.gw-flow.apollo.namespace-name=application
 spring.cloud.sentinel.datasource.gw-flow.apollo.flow-rules-key=${spring.application.name}-gw-flow-rules
