--- a/simple-gateway-demo/src/main/resources/application.properties
+++ b/simple-gateway-demo/src/main/resources/application.properties
@@ -17,6 +17,7 @@ zuul.routes.product.path=/product/**
 zuul.routes.product.service-id=product
 zuul.routes.product-api.path=/product-api/**
 zuul.routes.product-api.service-id=product
+zuul.ignored-services=
 
 apollo.bootstrap.enabled=true
 apollo.meta=http://10.36.30.90:8080
