--- a/product/product-server/pom.xml
+++ b/product/product-server/pom.xml
@@ -12,11 +12,22 @@
 		<sentinel.transport.simple.http.sto>1.7.0-sto</sentinel.transport.simple.http.sto>
 	</properties>
 	<dependencies>
+		<!-- 以下2个jar有修改，需要覆盖掉开源版本的 -->
 		<dependency>
 			<groupId>com.alibaba.csp</groupId>
 			<artifactId>sentinel-transport-simple-http</artifactId>
 			<version>${sentinel.transport.simple.http.sto}</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>	
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-transport-common</artifactId>
+            <version>${sentinel.transport.simple.http.sto}</version><!--$NO-MVN-MAN-VER$-->
+        </dependency>
+        <dependency>
+        	<groupId>com.alibaba</groupId>
+        	<artifactId>fastjson</artifactId>
+        	<version>1.2.58</version>
+        </dependency>
 		<dependency>
 			<groupId>com.alibaba.csp</groupId>
 			<artifactId>sentinel-datasource-apollo</artifactId>
