--- a/simple-gateway-demo/src/main/resources/application.properties
+++ b/simple-gateway-demo/src/main/resources/application.properties
@@ -20,12 +20,12 @@ zuul.routes.product-api.service-id=product
 zuul.ignored-services=
 
 apollo.bootstrap.enabled=true
-apollo.meta=http://10.36.30.90:8080
+apollo.meta=http://10.36.30.90:8081
 app.id=YW04_002
 
 spring.cloud.sentinel.log.dir=./logs/
 spring.cloud.sentinel.log.switch-pid=true
-spring.cloud.sentinel.transport.dashboard=http://localhost:7001
+spring.cloud.sentinel.transport.dashboard=http://10.11.2.53:7001
 
 spring.cloud.sentinel.datasource.gw-flow.apollo.namespace-name=application
 spring.cloud.sentinel.datasource.gw-flow.apollo.flow-rules-key=${spring.application.name}-gw-flow-rules
