关闭eureka自动保护

--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.application.name=eureka-server
 server.port=8761
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#关闭自我保护,为true则开启,为false则关闭
+eureka.server.enable-self-preservation=false
+#清理间隔(单位:毫秒,默认是60*1000)
+eureka.server.eviction-interval-timer-in-ms=10000
